--- a/package.json
+++ b/package.json
@@ -8,10 +8,24 @@
     "@types/unzipper": "^0.10.11"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
+    "autoprefixer": "^10.4.21"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.0",
+    "@radix-ui/react-select": "^2.2.5",
+    "@tanstack/react-query": "^5.80.7",
+    "bun-plugin-tailwind": "^0.0.15",
+    "hono": "^4.7.11",
     "neverthrow": "^8.2.0",
+    "open": "^10.1.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
     "unzipper": "^0.12.3",
     "zod": "^3.25.64"
   }
