--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-select": "^2.2.5",
     "@tanstack/react-query": "^5.80.7",
     "bun-plugin-tailwind": "^0.0.15",
+    "clsx": "^2.1.1",
     "hono": "^4.7.11",
     "neverthrow": "^8.2.0",
     "open": "^10.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
+    "tailwind-merge": "^3.3.1",
     "unzipper": "^0.12.3",
     "zod": "^3.25.64"
   }
