--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@radix-ui/react-select": "^2.2.5",
     "@tanstack/react-query": "^5.80.7",
     "bun-plugin-tailwind": "^0.0.15",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hono": "^4.7.11",
+    "lucide-react": "^0.515.0",
     "neverthrow": "^8.2.0",
     "open": "^10.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
     "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.4",
     "unzipper": "^0.12.3",
     "zod": "^3.25.64"
   }
