--- a/components.json
+++ b/components.json
@@ -7,7 +7,7 @@
     "config": "",
     "css": "src/styles.css",
     "baseColor": "neutral",
-    "cssVariables": true,
+    "cssVariables": false,
     "prefix": ""
   },
   "aliases": {
