--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tanstack/react-query": "^5.80.7",
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
