--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "open": "^10.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-resizable-panels": "^3.0.2",
     "react-router": "^7.6.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
