--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "hono": "^4.7.11",
     "lucide-react": "^0.515.0",
     "neverthrow": "^8.2.0",
